--- a/client/styles.css
+++ b/client/styles.css
@@ -45,6 +45,8 @@ body * {
 .color-app#header h1.color-app {
   letter-spacing: 10px;
   font-weight: normal;
+  margin: 0 10px !important;
+  color: #000;
 }
 
 /* Enter URL */
@@ -92,7 +94,7 @@ body * {
   border: 2px solid #ccc;
   padding: 2px;
   position: absolute;
-  top: 200px;
+  top: 220px;
   left: 5%;
 }
 
@@ -100,10 +102,20 @@ body * {
   background-color: blue;
 }
 
+.color-app.color-row {
+  display: flex;
+  justify-content: center;
+}
+
 .color-app.swatch {
-  width: 80px;
-  height: 30px;
+  width: 100px;
+  height: 80px;
   text-align: center;
+  display: inline-block;
+  margin: 0 min(10%, 15px);
+}
+
+.color-app.color {
   line-height: 30px;
 }
 
@@ -112,8 +124,8 @@ button.color-app {
   cursor: pointer;
   position: absolute;
   left: calc(50% - 100px);
+  top: 175px;
   background-color: #ddd;
   width: 200px;
   border-radius: 5px;
-  /* left: */
 }
