--- a/client/styles.css
+++ b/client/styles.css
@@ -98,12 +98,12 @@ body * {
 
 .color-app#iframe {
   width: 90% !important ;
-  height: 80vh !important;
+  height: 70vh !important;
   overflow: scroll !important;
   border: 2px solid #ccc;
   padding: 2px;
   position: absolute;
-  top: 220px;
+  top: 240px;
   left: 5%;
 }
 
@@ -112,6 +112,7 @@ body * {
 }
 
 .color-app.color-row {
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -122,7 +123,7 @@ body * {
   height: 80px;
   text-align: center;
   display: inline-block;
-  margin: 0 min(10%, 15px);
+  margin: 0 min(10%, 25px);
 }
 
 .color-app.color {
@@ -145,7 +146,7 @@ body * {
   cursor: pointer;
   position: absolute;
   left: calc(50% - 100px);
-  top: 175px;
+  top: 195px;
   background-color: #ddd;
   width: 200px;
   border-radius: 5px;
