--- a/client/styles.css
+++ b/client/styles.css
@@ -103,7 +103,7 @@ body * {
   border: 2px solid #ccc;
   padding: 2px;
   position: absolute;
-  top: 270px;
+  top: 340px;
   left: 5%;
 }
 
@@ -112,17 +112,23 @@ body * {
 }
 
 .color-app.color-row {
-  margin-top: 15px;
   display: flex;
+  margin: 15px;
+  margin-top: 80px;
   justify-content: center;
   align-items: center;
+  border-radius: 10px;
+  background-color: #eee;
 }
 
 .color-app.swatch {
   width: 120px;
   text-align: center;
   display: inline-block;
-  margin: 0 min(10%, 25px);
+  margin: 5px min(10%, 25px);
+  background-color: #ddd;
+  padding: 2px;
+  border-radius: 5px;
 }
 
 .color-app.selector {
@@ -135,7 +141,7 @@ body * {
 }
 
 .color-app.swatch label {
-  font-size: 12px;
+  font-size: 13px;
   margin-left: 3px;
 }
 
@@ -143,28 +149,63 @@ body * {
   cursor: pointer;
 }
 
+.color-app.swatch i.fa-lock-open {
+  color: rgb(172, 170, 170);
+}
+
+.color-app.swatch i.fa-lock {
+  color: rgb(85, 85, 85);
+}
+
 .color-app.color {
   line-height: 30px;
 }
 
-.color-app.add-swatch {
-  height: 20px;
-  width: 20px;
-  line-height: 20px;
-  cursor: pointer;
-  background-color: #ddd;
-  border-radius: 5px;
-  font-size: 20px;
-  padding: 0;
-}
-
+.color-app.add-swatch,
+.color-app.mode-span,
+.color-app.mode,
 .color-app.generate-colors {
   margin: auto !important;
   cursor: pointer;
   position: absolute;
   left: calc(50% - 100px);
-  top: 220px;
+  border: 0;
+  background-color: #999;
+  color: #fff;
   background-color: #ddd;
+  color: #333;
   width: 200px;
   border-radius: 5px;
+}
+
+.color-app.add-swatch {
+  top: 300px;
+  left: calc(50% - 60px);
+  width: 120px;
+  border: 0;
+}
+
+.color-app.mode-span,
+.color-app.mode {
+  top: 80px;
+  font-size: 13px;
+}
+
+.color-app.mode-span {
+  background-color: #eee;
+}
+
+.color-app.mode {
+  width: 150px;
+  left: calc(50% - 50px);
+  background-color: #fff;
+  font-size: 13px;
+  height: 23px;
+  line-height: 15px;
+}
+
+.color-app.generate-colors {
+  top: 110px;
+  width: 210px;
+  left: calc(50% - 105px);
 }
