--- a/client/styles.css
+++ b/client/styles.css
@@ -98,7 +98,7 @@ body * {
 
 .color-app#iframe {
   width: 90% !important ;
-  height: 70vh !important;
+  height: 60vh !important;
   overflow: scroll !important;
   border: 2px solid #ccc;
   padding: 2px;
@@ -114,7 +114,7 @@ body * {
 .color-app.color-row {
   display: flex;
   margin: 15px;
-  margin-top: 80px;
+  margin-top: 70px;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
@@ -122,16 +122,36 @@ body * {
 }
 
 .color-app.swatch {
-  width: 120px;
+  width: 140px;
   text-align: center;
   display: inline-block;
   margin: 5px min(10%, 25px);
   background-color: #ddd;
   padding: 2px;
   border-radius: 5px;
+  position: relative;
+}
+
+.color-app.close-swatch {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  width: 12px;
+  line-height: 10px;
+  font-size: 10px;
+  padding: 2px;
+  cursor: pointer;
+  border: 0;
+  background-color: #bbb;
+  border-radius: 10%;
+  margin: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .color-app.selector {
+  margin-top: 8px;
   margin-bottom: 6px;
 }
 
@@ -179,7 +199,7 @@ body * {
 }
 
 .color-app.add-swatch {
-  top: 300px;
+  top: 290px;
   left: calc(50% - 60px);
   width: 120px;
   border: 0;
